Add task feature added and checkbox functionality added

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             text, and save the changes.
           </p>
         </div>
-        <form>
+        <form class="w-50 mx-auto">
           <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingInput" />
             <label for="floatingInput">Add Your Task...</label>
           </div>
-          <button id="addTask" type="submit" class="btn btn-success">
+          <button id="addTask" type="submit" class="btn btn-success mx-auto">
             Add Task
           </button>
         </form>
       </section>
 
-      <section class="container text-center">
-        <div id="tasks" class="main-content"></div>
+      <section class="container text-center py-5">
+        <div id="allTasks" class="main-content"></div>
       </section>
     </main>
     <footer class="py-5 bg-dark text-center">
